maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: type mismatch;
 found   : Int
 required: String
      cmpt = keepHandOnSideWall() + cmpt
                                    ^PledgeMaze:32: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return dir
  ^PledgeMaze:36: error: not found: value tmp
  tmp = getDirection()
  ^PledgeMaze:39: error: not found: value tmp
    setDirection(tmp)
                 ^PledgeMaze:42: error: not found: value tmp
    setDirection(tmp)
                 ^